feat(git): Enforce SSH instead of HTTPS

--- a/roles/git/templates/config.j2
+++ b/roles/git/templates/config.j2
@@ -16,6 +16,12 @@ allowedSignersFile = {{ git_gpg_ssh_allowedsignersfile_path }}
 [init]
 defaultBranch = main
 
+[url "ssh://git@github.com/"]
+insteadOf = https://github.com/
+
+[url "ssh://git@gitlab.com/"]
+insteadOf = https://gitlab.com/
+
 [user]
 email = {{ git_user_email }}
 name = {{ git_user_name }}
