--- a/roles/git/templates/config.j2
+++ b/roles/git/templates/config.j2
@@ -25,4 +25,4 @@ insteadOf = https://gitlab.com/
 [user]
 email = {{ git_user_email }}
 name = {{ git_user_name }}
-signingkey = {{ ansible_user_dir }}/.ssh/id_ed25519.pub
+signingKey = {{ ansible_user_dir }}/.ssh/id_ed25519.pub
