style: Use a variable for the default username

--- a/roles/zsh/templates/.zshrc.j2
+++ b/roles/zsh/templates/.zshrc.j2
@@ -9,7 +9,7 @@ function prompt_character {
 }
 
 function prompt_username {
-    if [ "$(whoami)" = "nicholas" ]; then
+    if [ "$(whoami)" = "{{ nicholaspcole_systems_default_user }}" ]; then
         echo ""
     else 
         echo "$(whoami)@"
