--- a/roles/zsh/templates/.zshrc.d/homebrew.sh.j2
+++ b/roles/zsh/templates/.zshrc.d/homebrew.sh.j2
@@ -1,3 +1,5 @@
 # {{ nicholaspcole_systems_ansible_managed }}
 
-eval "$(/opt/homebrew/bin/brew shellenv)"
+if [ "$(uname -s)" = "Darwin" ]; then
+    eval "$(/opt/homebrew/bin/brew shellenv)"
+fi
